<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.edu</groupId>
    <artifactId>t4_ejemplo</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>6.3.0</version>
        </dependency>

        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.51.0.0</version>
        </dependency>

        <!-- Mis utilidade sql -->
        <dependency>
            <groupId>com.github.abarcam956</groupId>
            <artifactId>sqlutils</artifactId>
            <version>1.0.3</version>
        </dependency>
    </dependencies>

    <resources>
        <!-- Para definir valores de propiedades presentes en este archivo para la aplicacion Java -->
        <resource>
            <directory>src/main/resources</directory>
              <includes>
                 <include>**/*.properties</include>
              </includes>
            <filtering>true</filtering>
        </resource>
    </resources>
</project>